# soul-or-silicon

./: .gitignore  README.md  main.py  pyproject.toml
arduino/sketch_controller/: sketch_controller.ino
deploy/plymouth/silicon-or-soul/: silicon-or-soul.plymouth  silicon-or-soul.script
deploy/systemd/: silicon-or-soul.service
scripts/: install-kiosk-service.sh  revert-boot-splash.sh  setup-boot-splash.sh
src/silicon_or_soul/: __init__.py  __main__.py  audio.py  boot.py  config.py  controllers.py  game.py  input.py  intro.py  logging_jsonl.py  particles.py  songs.py  ui.py
