[project]
name = "silicon-or-soul"
version = "0.1.0"
description = "Silicon or Soul game show engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame",
    "pyserial",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/silicon_or_soul"]

